--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -38,6 +38,29 @@
   margin-top: 10px;
 }
 
+.icon img {
+  width: 3rem;
+}
+
+.card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  padding: 15px 10px;
+  border-radius: 10px !important;
+}
+
+.card span {
+  font-size: 2.8rem;
+  font-weight: 600;
+}
+
+.card h3 {
+  font-size: 1.1rem;
+  font-weight: 500;
+}
+
 @media (min-width: 768px) {
   .form {
     padding: 20px 30px;
