--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -26,7 +26,7 @@
 }
 
 .subTitle {
-  font-size: 1.2rem;
+  font-size: 15px;
   margin-bottom: 5px;
 }
 
@@ -61,6 +61,56 @@
   font-weight: 500;
 }
 
+.weatherCard {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.weatherCard div {
+  text-align: center;
+}
+
+.weatherCard div:not(:last-child) {
+  border-right: 1px solid #0000001f;
+  padding-right: 10px;
+}
+
+.weatherCard h2 {
+  font-size: 24px;
+  font-weight: 600;
+  margin: 15px 0;
+}
+
+.weatherCard span {
+  font-size: 14px;
+}
+
+.weatherCard svg {
+  font-size: 18px;
+}
+
+.activeCard {
+  background-color: #008efb85;
+  border-radius: 8px;
+  padding: 15px 10px;
+}
+
+.paperContainer {
+  padding: 10px;
+  border-radius: 10px !important;
+  height: 100% !important;
+  text-align: center;
+}
+
+.paperContainer h4 {
+  margin-bottom: 15px;
+}
+
+.section {
+  margin-bottom: 15px 0 !important;
+}
+
 @media (min-width: 768px) {
   .form {
     padding: 20px 30px;
@@ -74,5 +124,21 @@
   .title {
     font-size: 1.7rem;
     margin-bottom: 5px;
+  }
+
+  .weatherCard {
+    gap: 15px;
+  }
+  
+  .weatherCard h2 {
+    font-size: 24px;
+  }
+  
+  .weatherCard span {
+    font-size: 14px;
+  }
+  
+  .weatherCard svg {
+    font-size: 20px;
   }
 }
