--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -21,7 +21,7 @@
 }
 
 .title {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   margin-bottom: 5px;
 }
 
@@ -65,6 +65,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 10px;
 }
 
 .weatherCard div {
