--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -185,6 +185,15 @@
   color: #FFFFFF;
 }
 
+.listHeader {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  gap: 30px;
+}
+
 @media (min-width: 768px) {
   .form {
     padding: 20px 30px;
@@ -218,6 +227,11 @@
 
   .appContent {
     padding: 20px 40px;
+  }
+
+  .listHeader {
+    justify-content: space-between;
+    margin-bottom: 20px;
   }
 }
 
